kubernetes/apps/networking/traefik/add-ons/external-services/minio_backup.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  namespace: networking
  annotations:
    external-dns.home.arpa/enabled: "true"
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/hostname: minio.${SECRET_DOMAIN},"s3.${SECRET_DOMAIN}"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    hajimari.io/enable: "true"
    hajimari.io/icon: simple-icons:proxmox
    # coredns.io/hostname: "minio.${SECRET_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-traefik-middleware-chains-authentik@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: &host "minio.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: minio-console
                port:
                  number: 9001
            path: /
            pathType: Prefix
    - host: "s3.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-s3
                port:
                  number: 9000
  tls:
    - hosts:
        - "minio.${SECRET_DOMAIN}"
        - "s3.${SECRET_DOMAIN}"
      secretName: "minio-${SECRET_DOMAIN/./-}-tls"
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  ports:
    - name: https
      protocol: TCP
      port: 9001
      targetPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: minio-s3
spec:
  ports:
    - name: https
      protocol: TCP
      port: 9000
      targetPort: 9000

---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-console
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - name: https
        port: 9001
        protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: minio-s3
subsets:
  - addresses:
      - ip: 192.168.1.2
    ports:
      - name: https
        port: 9000
        protocol: TCP
